README.md: removed description, changed Introduction to About